--- a/src/Components/Products/ProdBox.module.css
+++ b/src/Components/Products/ProdBox.module.css
@@ -1,4 +1,30 @@
 .ProdBox {
-    border: 1px solid;
     background-color: white;
+    height: 180px;
+    padding: 10px;
+    border-style: none;
+    border-radius: 5px;
+    box-shadow: 4px 4px 4px rgb(23, 70, 77);
+}
+
+.ImgContainer {
+    text-align: center;
+}
+
+.ProdBox img {
+    box-shadow: 0 4px 8px 0 rgba(102, 164, 173, 0.2), 0 6px 20px 0 rgba(102, 164, 173, 0.19);
+    width: 100px;
+    border-radius: 5px;
+}
+
+.DeatilsContainer {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+}
+
+.Details {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
