--- a/src/Components/Products/ProdBox.module.css
+++ b/src/Components/Products/ProdBox.module.css
@@ -28,3 +28,14 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.ActionButtonsContainer {
+    margin-top: 5%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 100%;
+    text-align: center;
+    align-content: center;
+    height: 20%;
+    align-items: center;
+}
