--- a/src/Components/Header/HeaderCart.module.css
+++ b/src/Components/Header/HeaderCart.module.css
@@ -2,9 +2,7 @@
     display:flex;
     width: 10%;
     height: 50%;
-    background-color: #428f8a;
-    border: 0.5px solid;
-    border-style: inset;
+    background-color: rgb(77, 152, 212);
     border-radius: 3px;    
     color: white;
     align-items: center;
