--- a/src/Components/ProductInfo/FullSpecs.module.css
+++ b/src/Components/ProductInfo/FullSpecs.module.css
@@ -1,3 +1,10 @@
 .fullSpecsContainer {
     grid-area: fullspec;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    border-top: 2px inset  #3a7bd5;
+    border-bottom: 2px inset  #3a7bd5;
+    margin-top: 5px;
 }
