--- a/src/Components/CartPage/ItemLine.module.css
+++ b/src/Components/CartPage/ItemLine.module.css
@@ -12,4 +12,8 @@
 
 .itemName {
     justify-self: baseline;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    overflow: hidden;
 }
