--- a/src/Components/Checkout/Checkout.module.css
+++ b/src/Components/Checkout/Checkout.module.css
@@ -1,17 +1,20 @@
-.cartPageContainer {
+.checkoutPageContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-items: center;
     padding: 15px;
     font-size: 18px;
-    width: 60%;
     margin: auto;
 }
 
 .itemsContainer {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     border-style: none;
     border-radius: 5px;
     box-shadow: 4px 4px 4px rgb(23, 70, 77);
     background-color: white;
+    width: 780px;
+    justify-items: center;
+    padding: 20px;
 }
