img-gallery-started

--- a/src/Components/ProductInfo/ImageGallery.module.css
+++ b/src/Components/ProductInfo/ImageGallery.module.css
@@ -1,3 +1,13 @@
 .imgGalleryContainer {
+    display: flex;
+    flex-direction: column;
     grid-area: imggallery;
+    align-items: center;
+}
+
+.miniContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
 }
